--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,14 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".MainActivity" android:hardwareAccelerated="true">
+        <activity android:name=".MainActivity" android:hardwareAccelerated="true" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".WebActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
